# bevy_mod_static_inventory

./: Cargo.toml  README.md
examples/: basic.rs
src/: ecs.rs  item.rs  key.rs  lib.rs  stack.rs
